Showing Images from Blob Storage

--- a/src/app/products/products/products.component.html
+++ b/src/app/products/products/products.component.html
@@ -7,7 +7,7 @@
     <ul class="section-body">
       <li *ngFor="let product of products" class="product">
         <a [routerLink]="['/products', product.id]">
-          <img [src]="product.imageFile" i18n-alt="product name" alt="{{ product.name }}" lazy>
+          <img [src]="cdnHost + product.imageFile" i18n-alt="product name" alt="{{ product.name }}" lazy>
           <strong i18n="product name">{{ product.name }}</strong>
         </a>
         <p i18n="product summary">{{ product.summary }}</p>
