--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="App route">
   <app-header></app-header>
+  ENV {{ environment | json }}
   <main>
     <router-outlet></router-outlet>
   </main>
