--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -1,4 +1,4 @@
-@import '~node_modules/@picocss/pico/scss/pico.classless.scss';
+@import 'node_modules/@picocss/pico/scss/pico.classless.scss';
 
 ul {
   padding: 0;
